--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
 
@@ -13,28 +15,29 @@
 	  <!--HEADER-->
 	  <div id="header">
 		  <div class="container">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<div class="container-fluid">
-				<a class="navbar-brand" href="#"><img src="/imagens/logo.svg" alt="Logo"></a>
+			<nav class="navbar navbar-expand-lg navbar-light justify-content-between">
+				<a class="navbar-brand" href="#"><img src="/imagens/logo.svg" class="img-fluid" alt="Logo"></a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="nav-link active" aria-current="page" href="#">Página Inicial</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Features</a>
+						<a class="nav-link" href="#">Sobre</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Pricing</a>
+						<a class="nav-link" href="#">Serviços</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+						<a class="nav-link" href="#">Portfólio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contato</a>
 					</li>
 					</ul>
-				</div>
 				</div>
 			</nav>
 		  </div>
@@ -44,12 +47,12 @@
 
     
 
-    <!-- Option 1: Bootstrap Bundle with Popper 
+    <!-- Option 1: Bootstrap Bundle with Popper -->
 	<script
 	src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 	integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-	crossorigin="anonymous"-->
-  </script>
+	crossorigin="anonymous"
+  ></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
