Sessão Sobre finalizada

--- a/index.html
+++ b/index.html
@@ -42,6 +42,39 @@
 			</nav>
 		  </div>
 	  </div>
+
+	  <!--SLIDER-->
+	  <div id="slider" class="block">
+		  <div class="container mt-5">
+			  <div class="row">
+				  <div class="col-md-4 align-self-center mb-md-0 mb-4">
+					  <h1>Lorem ipsum dolor sit amet</h1>
+					  <h4 class="mb-4">Laborum facere quas omnis, aut numquam ea!</h4>
+					  <a href="#" class="btn button-primary btn-primary button d-md-inline-block d-block mb-md-0 mb-2 mr-md-2">Saiba Mais</a>
+					  <a href="#" class="btn button-primary-outline btn-outline-primary button d-md-inline-block d-block">Contato</a>
+				  </div>
+				  <div class="col-md-8 align-self-center">
+					  <img src="/imagens/slider.svg" class="img-fluid" alt="">
+				  </div>
+			  </div>
+		  </div>
+	  </div>
+	  <!--SOBRE-->
+	  <div id="sobre" class="block">
+		  <div class="container">
+			  <div class="row">
+				  <div class="col-md-6 text-center align-self-center order-md-1 order-2">
+					<img src="/imagens/sobre.svg" class="img-fluid" alt="Imagem sobre">
+				  </div>
+				  <div class="col-md-6 align-self-center mb-md-0 mb-4 order-md-2 order-1">
+					  <h2 class="title">Lorem ipsum dolor sit, amet consectetur</h2>
+					  <h4 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus voluptatem nobis </h4>
+					  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque numquam dolorum consequuntur sit inventore corrupti saepe totam ipsa voluptates delectus quo animi, quaerat quisquam voluptas quasi dolor nostrum iure ad.</p>
+					  <a href="#" class="btn btn-primary button button-primary">entre em contato</a>
+				  </div>
+			  </div>
+		  </div>
+	  </div>
 	
     
 
