--- a/index.html
+++ b/index.html
@@ -76,7 +76,52 @@
 		  </div>
 	  </div>
 	
-    
+    <!--SERVIÇOS-->
+	<div id="servicos" class="block">
+		<div class="container">
+			<h2 class="title text-center">Nossos Serviços</h2>
+			<h4 class="suntitle text-center mb-4">Lorem ipsum dolor, sit amet consectetur.</h4>
+			<div class="row">
+				<div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+					<a href="#" class="destaque">
+						<div class="img-container mb-3">
+							<img src="/imagens/destaque1.svg" alt="Destaque" class="img-fluid">
+						</div>#
+						<h5>Et sumi capo</h5>
+						<p>Unde officia esse eius eligendi assumenda omnis expedita ratione aspernatur</p>
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+					<a href="#" class="destaque">
+						<div class="img-container mb-3">
+							<img src="/imagens/destaque1.svg" alt="Destaque" class="img-fluid">
+						</div>#
+						<h5 class="text-uppercase">Et sumi capo</h5>
+						<p>Unde officia esse eius eligendi assumenda omnis expedita ratione aspernatur</p>
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+					<a href="#" class="destaque">
+						<div class="img-container mb-3">
+							<img src="/imagens/destaque1.svg" alt="Destaque" class="img-fluid">
+						</div>#
+						<h5 class="text-uppercase">Et sumi capo</h5>
+						<p>Unde officia esse eius eligendi assumenda omnis expedita ratione aspernatur</p>
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+					<a href="#" class="destaque">
+						<div class="img-container mb-3">
+							<img src="/imagens/destaque1.svg" alt="Destaque" class="img-fluid">
+						</div>#
+						<h5 class="text-uppercase">Et sumi capo</h5>
+						<p>Unde officia esse eius eligendi assumenda omnis expedita ratione aspernatur</p>
+					</a>
+				</div>
+			</div>
+		</div>
+
+	</div>
 
     
 
